backend/internal/architecture/testdata/invalid/internal/modules/bad/generic_alias.go
package bad

// Port demonstrates a generic interface alias bypass.
type Port[T any] = interface{ Put(T) error }
